background image resizes correctly when width < 479 px

--- a/webpage/HAL_files/hal.css
+++ b/webpage/HAL_files/hal.css
@@ -734,7 +734,7 @@ input:checked + .button::before {
 }
 
 @media screen and (max-width: 479px) {
-    .content {
+    .background {
         background-position: 50% 10%;
         background-size: 50%;
     }
