--- a/hal/chatbot/static/chatbot/hal.css
+++ b/hal/chatbot/static/chatbot/hal.css
@@ -19,6 +19,12 @@
 .fill {
     height: 100%;
     width: 100%;
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.fixed {
+    position: fixed;
 }
 
 html {
@@ -469,7 +475,10 @@ label {
 }
 
 .container {
-    flex: 1;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    min-height: 0;
     background-color: hsla(0, 0%, 100%, 0);
 }
 
@@ -665,8 +674,12 @@ input:checked + .button::before {
     max-width: 400px;
     min-height: 50px;
     min-width: 200px;
-    -o-object-fit: fill;
-    object-fit: fill;
+    overflow-y: auto;
+}
+
+.conversation-text {
+    color: #E2E2E2;
+    font-size: medium;
 }
 
 @media screen and (max-width: 767px) {
