--- a/hal/chatbot/templates/chatbot/HAL.html
+++ b/hal/chatbot/templates/chatbot/HAL.html
@@ -2,18 +2,29 @@
 <!DOCTYPE html>
 
 <head>
+    <script>
+        console.log(window.location.host);
+        const messageSocket = new WebSocket(
+            'ws://' + window.location.host + '/input/'
+        );
+
+        messageSocket.onmessage = function(e) {
+            const data = JSON.parse(e.data);
+            console.log(data);
+        }
+    </script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>HAL</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="{% static 'chatbot/hal.css' %}" rel="stylesheet" type="text/css">
     <script src="{%  static 'chatbot/jquery-3.5.1.js' %}" type="text/javascript"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script type="text/javascript">
+   {% comment %} <script type="text/javascript">
         !function (o, c) {
             var n = c.documentElement, t = " w-mod-";
             n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
         }(window, document);
-    </script>
+    </script>{% endcomment %}
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="shortcut icon" type="image/x-icon">
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="apple-touch-icon">
 </head>
@@ -22,8 +33,8 @@
 <audio id="startup" src="{% static 'chatbot/startup.mp3' %}"></audio>
 <audio id="background-audio" src="{% static 'chatbot/ambient.mp3' %}"></audio>
 <audio id="shutdown" src="{% static 'chatbot/shutdown.mp3' %}"></audio>
-<div id="window" class="flex-container flex-column fill" data-user-id="{{ instance_id }}">
-    <div class="container fill">
+<div id="window" class="flex-container flex-column fill fixed">
+    <div class="container">
         <div class="switch-group w-form">
             <form id="switch-group" name="switch-group" data-name="On Off Switch" class="switch-group" action="" method="post"> {% csrf_token %}
                 <label class="lock">
@@ -55,15 +66,14 @@
                         const $shutdown = document.getElementById('shutdown');
                         const $startup = document.getElementById('startup');
 
-                        const instanceId = document.getElementById('window').getAttribute('data-user-id');
-
                         console.log("submitting");
-                        $.post("{{ request.build_absolute_uri }}" + instanceId + '/status', 'on', function (response) {
-                            console.log(response);
 
-                        });
 
                         if (this.checked) {
+                            messageSocket.send(JSON.stringify({
+                                'type': 'status',
+                                'message': 'on',
+                            }));
                             const $lock = $(this).closest('.switch-group').find('.lock-box');
                             $lock.prop('checked', true);
                             $lock.change();
@@ -87,6 +97,10 @@
                                 }
                             });
                         } else {
+                            messageSocket.send(JSON.stringify({
+                                'type': 'status',
+                                'message': 'off',
+                            }));
                             $startup.pause();
                             $startup.currentTime = 0;
 
@@ -120,13 +134,21 @@
                                class="submit-button w-button">
                         <script>
                             $('#query-form').submit(function(e) {
-                                const text = $.trim($('#Input').val());
-                                console.log("submitting " + text);
+                                const input = $('#Input');
+                                const text = $.trim(input.val());
                                 if (text !== "") {
-                                    const instanceId = document.getElementById('window').getAttribute('data-user-id');
-                                    $.post('{{ request.build_absolute_uri }}' + instanceId + '/input', text, function(response) {
-                                        console.log(response);
-                                    });
+                                    const message = document.createElement("p");
+                                    message.setAttribute("align", "right");
+                                    message.classList.add('conversation-text');
+                                    message.textContent = text;
+                                    const conversation = $("#conversation-div");
+                                    conversation.append(message);
+                                    console.log("submitting " + text);
+                                    messageSocket.send(JSON.stringify({
+                                        'type': 'message',
+                                        'message': text,
+                                    }));
+                                    input.value = '';
                                 }
                                 e.preventDefault();
                             });
