--- a/chatbot/templates/chatbot/HAL.html
+++ b/chatbot/templates/chatbot/HAL.html
@@ -10,8 +10,11 @@
 
         messageSocket.onclose = function(event) {
             const $switch = $('.switch-box');
-            $switch.prop('checked', false);
-            $switch.change();
+            if ($switch.prop('checked') === true)
+            {
+                $switch.prop('checked', false);
+                $switch.change();
+            }
             messageSocket = new WebSocket(
                 'ws://' + window.location.host + '/input/'
             );
@@ -44,13 +47,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="{% static 'chatbot/hal.css' %}" rel="stylesheet" type="text/css">
     <script src="{%  static 'chatbot/jquery-3.5.1.js' %}" type="text/javascript"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-   {% comment %} <script type="text/javascript">
-        !function (o, c) {
-            var n = c.documentElement, t = " w-mod-";
-            n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
-        }(window, document);
-    </script>{% endcomment %}
+            crossorigin="anonymous"></script>
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="shortcut icon" type="image/x-icon">
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="apple-touch-icon">
 </head>
