--- a/chatbot/templates/chatbot/HAL.html
+++ b/chatbot/templates/chatbot/HAL.html
@@ -2,10 +2,12 @@
 <!DOCTYPE html>
 
 <head>
+    <script src="{% static 'chatbot/reconnecting-websocket.js' %}" type="text/javascript"></script>
     <script>
         console.log(window.location.host);
-        let messageSocket = new WebSocket(
-            'ws://' + window.location.host + '/input/'
+        let wsScheme = window.location.protocol === "https:" ? "wss://" : "ws://";
+        let messageSocket = new ReconnectingWebSocket(
+            wsScheme + window.location.host + '/input/'
         );
 
         messageSocket.onclose = function(event) {
@@ -16,7 +18,7 @@
                 $switch.change();
             }
             messageSocket = new WebSocket(
-                'ws://' + window.location.host + '/input/'
+                wsScheme + window.location.host + '/input/'
             );
         }
 
