Now uses a ReconnectingWebSocket in place of a WebSocket.

--- a/chatbot/templates/chatbot/HAL.html
+++ b/chatbot/templates/chatbot/HAL.html
@@ -17,7 +17,7 @@
                 $switch.prop('checked', false);
                 $switch.change();
             }
-            messageSocket = new WebSocket(
+            messageSocket = new ReconnectingWebSocket(
                 wsScheme + window.location.host + '/input/'
             );
         }
