--- a/chatbot/static/chatbot/hal.css
+++ b/chatbot/static/chatbot/hal.css
@@ -27,6 +27,10 @@
     position: fixed;
 }
 
+.pad {
+    padding: 10px;
+}
+
 html {
     height: 100%;
     font-family: sans-serif;
@@ -57,7 +61,8 @@ audio:not([controls]) {
 }
 
 a {
-    background-color: transparent
+    background-color: transparent;
+    color: unset;
 }
 
 a:active, a:hover {
@@ -453,6 +458,49 @@ label {
     background-color: #000;
 }
 
+.top-left {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.font-large {
+    font-size: 24px;
+}
+
+.text-center-x {
+    text-align: center;
+}
+
+.text-justify {
+    text-align: justify;
+}
+
+.center-x {
+    margin: 0 auto;
+    display: block;
+}
+
+.white {
+    color: #cccccc;
+}
+
+.background-red {
+    background-color: #991417;
+}
+
+.scroll-y {
+    overflow-y: auto;
+}
+
+.block {
+    position: static;
+    max-width: 500px;
+    top: 0;
+    margin: 40px auto 0;
+    word-wrap: normal;
+}
+
 .background {
     position: fixed;
     top: 0;
@@ -657,6 +705,10 @@ input:checked + .slider:before {
     transition: .4s;
 }
 
+.rounded {
+    border-radius: 5px;
+}
+
 input:checked + .button {
     background-image: url("lock-24px.svg");
     background-position: 50% 50%;
@@ -783,7 +835,7 @@ h6 {
 
 p {
     margin-top: 0;
-    margin-bottom: 10px
+    margin-bottom: 20px
 }
 
 blockquote {
