Fixed issue with cross-origin integrity check

--- a/chatbot/templates/chatbot/HAL.html
+++ b/chatbot/templates/chatbot/HAL.html
@@ -49,8 +49,10 @@
     <title>HAL</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="{% static 'chatbot/hal.css' %}" rel="stylesheet" type="text/css">
-    <script src="{%  static 'chatbot/jquery-3.5.1.js' %}" type="text/javascript"
-            crossorigin="anonymous"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="shortcut icon" type="image/x-icon">
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="apple-touch-icon">
 </head>
