--- a/chatbot/templates/chatbot/background.html
+++ b/chatbot/templates/chatbot/background.html
@@ -8,8 +8,10 @@
     <link href="{% static 'chatbot/hal.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="shortcut icon" type="image/x-icon">
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="apple-touch-icon">
-    <script src="{%  static 'chatbot/jquery-3.5.1.js' %}" type="text/javascript"
-            crossorigin="anonymous"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
 </head>
 <body class="body scroll-y top-left fill">
     <div class="block white pad">
