--- a/chatbot/templates/chatbot/background.html
+++ b/chatbot/templates/chatbot/background.html
@@ -71,5 +71,9 @@
             }
         </script>
     </div>
+<a style="position: fixed; bottom: 0; left: 0; color: white; text-decoration: none" href="https://aracroproducts.com">
+<img alt="Aracro Products logo" height="30" src="{% static 'ap_logo_large.png' %}">
+    By Aracro Products
+</a>
 </body>
 </html>
