Added border to branding

--- a/chatbot/templates/chatbot/background.html
+++ b/chatbot/templates/chatbot/background.html
@@ -71,7 +71,17 @@
             }
         </script>
     </div>
-<a style="position: fixed; bottom: 0; left: 0; color: white; text-decoration: none; background-color: black"
+<a style="
+position: fixed;
+bottom: 0;
+left: 0;
+color: white;
+text-decoration: none;
+background-color: black;
+padding-top: 5px;
+padding-right: 5px;
+border-top-right-radius: 5px;
+box-shadow: 0 0 4px 11px #f33921;"
    href="https://aracroproducts.com">
 <img alt="Aracro Products logo" height="30" src="{% static 'ap_logo_large.png' %}">
     By Aracro Products
