Added viewport property to background page meta

--- a/chatbot/templates/chatbot/background.html
+++ b/chatbot/templates/chatbot/background.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HAL Home</title>
     <link href="{% static 'chatbot/hal.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'chatbot/hal_icon.png' %}" rel="shortcut icon" type="image/x-icon">
